<resources>
    <string name="app_name">Stocker</string>
    <string name="btnRegEmp">Registrarse</string>
    <string name="btnExit">Volver</string>
    <string name="LbIntReg">Introduzca los datos de su empresa</string>
    <string name="txtNomb">Nombre:</string>
    <string name="txtLoc">Ciudad:</string>
    <string name="txtCodigo">Código:</string>
    <string name="BotStrTienda">Buscar Tienda</string>
    <string name="botStrProd">Buscar Producto</string>
    <string name="Lbregistro">Eres una empresa?</string>
    <string name="btIniSesi">Iniciar Sesión</string>
    <string name="intNombEmp">Introduce el nombre de tu empresa, la contraseña y su dirección</string>
    <string name="txtCont">Contraseña:</string>
    <string name="registrar_producto">Registrar Producto</string>
    <string name="numero_de_productos">Numero de Productos</string>
    <string name="_1">1</string>
    <string name="tvregProd">Ingrese el nombre del producto y la cantidad que va a cambiar, en positivo o negativo</string>
    <string name="cantidad">Cantidad</string>
    <string name="strCont">Contacto</string>
    <string name="strCompApp">Compartir App</string>
    <string name="strllamar">Llamar</string>
    <string name="strmail">Mail</string>
    <string name="strubi">Ubicación</string>
    <string name="strAcDe">Acerca de…</string>
    <string name="strAccWeb">Acceso a web</string>
    <string name="MiNombre">Antonio Sobrino Martín</string>
    <string name="appname">STOCKER</string>
    <string name="tlf">Contacto</string>
    <string name="Web">Página Web(Opcional):</string>
    <string name="tus_productos">Tus productos:</string>
    <string name="verMs">Ver Más</string>
    <string name="estos_son_nuestros_productos_disponibles">Estos son nuestros productos disponibles:</string>
    <string name="correo_electr_nico">Email(Opcional):</string>
    <string name="registrarse">Registrarse</string>
    <string name="mandar_email">Mandar Email</string>
    <string name="que_es_stocker">¿Que es?</string>
    <string name="reply_title" />
    <string name="pref_nmb">Nombre de Sucursal:</string>
    <string name="direcci_n">Dirección:</string>
    <string name="deseabl">Solo para empresas: Desea que sus datos se almacenen para no tener que iniciar sesion todo el rato?</string>
    <string name="supcont">Quieres que solo te salgan supermercados de una sucursal concreta?</string>
    <string name="ciupref">Decide si quieres limitar tus busquedas a tu ciudad</string>
    <string name="filtrate">filtrar</string>
    <string name="ProductoBuscar">Producto a Buscar</string>
    <string name="guarReg">¿Guardar Registros?</string>
    <string name="mercadona">Mercadona</string>
    <string name="dia">Dia</string>
    <string name="lidl">Lidl</string>
    <string name="eroski">Eroski</string>
    <string name="carrefour">Carrefour</string>
    <string name="consum">Consum</string>
    <string name="musica">¿Activar Musica?</string>
    <string name="registra_una_foto_para_tu_supermercado">Registra una foto para tu supermercado!</string>
    <string name="ingresa_un_video_promocional">Ingresa Un video Promocional!</string>
    <string name="subir_video">Subir Video</string>
    <string name="ver_video_promocional">Ver Video Promocional</string>
    <string name="escuch">Escuchar Cancion Promocional</string>
    <string name="registrar_ubicacion_de_tu_supermercado">Registrar Ubicacion de tu Supermercado</string>
    <string name="mapa">MAPA</string>
    <string name="ver_en_mapa">Ver En Mapa</string>

</resources>