<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnSalirReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:onClick="volver"
        android:text="@string/btnExit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ETID"
        android:layout_width="219dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="96dp"
        android:ems="10"
        android:hint="@string/txtCont"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETNomEmpr" />

    <EditText
        android:id="@+id/ETCiuEmpr"
        android:layout_width="219dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="96dp"
        android:ems="10"
        android:hint="@string/txtLoc"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETID" />

    <EditText
        android:id="@+id/ETNomEmpr"
        android:layout_width="219dp"
        android:layout_height="57dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="96dp"
        android:ems="10"
        android:hint="@string/txtNomb"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbIntDat"
        android:layout_width="193dp"
        android:layout_height="60dp"

        android:layout_marginTop="36dp"
        android:text="@string/LbIntReg"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRegReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/btnRegEmp"
        app:layout_constraintBottom_toTopOf="@+id/btnSalirReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>