<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <Button
        android:id="@+id/ButtonBT"
        android:layout_width="117dp"
        android:layout_height="68dp"
        android:layout_marginTop="147dp"
        android:text="@string/BotStrTienda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BotonBP"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/BotonBP"
        android:layout_width="128dp"
        android:layout_height="78dp"
        android:layout_marginTop="144dp"
        android:text="@string/botStrProd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRegistroEmpresa"
        android:layout_width="179dp"
        android:layout_height="62dp"
        android:onClick="abrirRegistrar"
        android:text="@string/btnRegEmp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/lbEmpReg"
        android:layout_width="134dp"
        android:layout_height="27dp"
        android:layout_marginStart="88dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/Lbregistro"
        android:textColor="#207BEA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnIniSesi"
        android:layout_width="175dp"
        android:layout_height="59dp"
        android:layout_marginBottom="16dp"
        android:onClick="abrirInicioSec"
        android:text="@string/btIniSesi"
        app:layout_constraintBottom_toTopOf="@+id/btnRegistroEmpresa"
        app:layout_constraintEnd_toEndOf="parent" />








</androidx.constraintlayout.widget.ConstraintLayout>