<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"><![CDATA[
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">











    ]]>

    <EditText
        android:id="@+id/etISC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:ems="10"
        android:hint="@string/txtCont"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/btnIniSec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtintrNomb"
        app:layout_constraintVertical_bias="0.225" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="106dp"
        android:layout_height="61dp"
        android:onClick="volver"
        android:text="Salir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETISN"
        app:layout_constraintVertical_bias="0.833" />

    <TextView
        android:id="@+id/txtintrNomb"
        android:layout_width="175dp"
        android:layout_height="120dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/intNombEmp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101" />

    <EditText
        android:id="@+id/ETISN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:hint="@string/txtNomb"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtintrNomb" />

    <Button
        android:id="@+id/btnIniSec"
        android:layout_width="106dp"
        android:layout_height="61dp"
        android:layout_marginTop="204dp"
        android:text="@string/btIniSesi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETISN" />
</androidx.constraintlayout.widget.ConstraintLayout>